--- a/index.html
+++ b/index.html
@@ -140,7 +140,65 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <script>
-        
+        window.sr = ScrollReveal();
+        sr.reveal('.navbar', {
+            duration: 2000,
+            origin:'bottom'
+        });
+        window.sr = ScrollReveal();
+        sr.reveal('.showcase-left', {
+            duration: 2000,
+            origin:'top',
+            distance:'300px'
+        });
+        window.sr = ScrollReveal();
+        sr.reveal('.showcase-right', {
+            duration: 2000,
+            origin:'right',
+            distance:'300px'
+        });
+        window.sr = ScrollReveal();
+        sr.reveal('.showcase-btn', {
+            duration: 2000,
+            delay:2000,
+            origin:'bottom'
+        });
+        window.sr = ScrollReveal();
+        sr.reveal('#testimonials div', {
+            duration: 2000,
+            origin:'bottom',
+        });
+        window.sr = ScrollReveal();
+        sr.reveal('.info-left', {
+            duration: 2000,
+            origin:'left',
+            distance:'300px',
+            viewFactor:0.2
+        });
+        window.sr = ScrollReveal();
+        sr.reveal('.info-right', {
+            duration: 2000,
+            origin:'right',
+            distance:'300px',
+            viewFactor:0.2
+        });
+    </script>
+    <script>
+         $(function() {
+      // Smooth Scrolling
+      $('a[href*="#"]:not([href="#"])').click(function() {
+        if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+          var target = $(this.hash);
+          target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+          if (target.length) {
+            $('html, body').animate({
+              scrollTop: target.offset().top
+            }, 1000);
+            return false;
+          }
+        }
+      });
+    });
     </script>
 </body>
 </html>
